# flox

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  DISCLAIMER.md  LICENSE  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: CMakeLists.txt  book_side_benchmark.cpp  book_side_latency_benchmark.cpp  candle_aggregator_benchmark.cpp  cpu_affinity_benchmark.cpp  full_order_book_benchmark.cpp  nlevel_order_book_benchmark.cpp  position_manager_benchmark.cpp  windowed_order_book_benchmark.cpp
cmake/: floxConfig.cmake.in
demo/: CMakeLists.txt
demo/include/demo/: demo_builder.h  demo_connector.h  demo_strategy.h  latency_collector.h  simple_components.h
demo/src/: demo_builder.cpp  demo_connector.cpp  demo_strategy.cpp  main.cpp
docs/: architecture.md  future.md  index.md  order_book_benchmarks.md
docs/components/: abstract_engine.md  abstract_engine_builder.md  abstract_event_pool.md  abstract_execution_listener.md  abstract_execution_tracker.md  abstract_executor.md  abstract_killswitch.md  abstract_market_data_subscriber.md  abstract_order_book.md  abstract_order_validator.md  abstract_pnl_tracker.md  abstract_position_manager.md  abstract_risk_manager.md  abstract_strategy.md  arena_resource.md  book_side.md  book_update.md  book_update_bus.md  book_update_event.md  candle.md  candle_aggregator.md  candle_aggregator_component.md  candle_bus.md  candle_event.md  common.md  connector_factory.md  connector_manager.md  decimal.md  engine.md  engine_component.md  engine_config.md  event_bus.md  event_bus_component.md  event_dispatcher.md  exchange_connector.md  execution_tracker_adapter.md  execution_tracker_component.md  free_list_allocator.md  full_order_book.md  killswitch_component.md  (+36 more)
docs/components/aggregator/: candle_aggregator.md
docs/components/book/: abstract_order_book.md  book_update.md  candle.md  nlevel_order_book.md  trade.md
docs/components/connector/: connector_factory.md  connector_manager.md  exchange_connector.md
docs/components/engine/: abstract_market_data_subscriber.md  abstract_subscriber.md  abstract_subsystem.md  engine.md  engine_config.md  event_dispatcher.md  symbol_registry.md  tick_barrier.md  tick_guard.md
docs/components/execution/: abstract_execution_listener.md  abstract_executor.md  execution_tracker_adapter.md  multi_execution_listener.md  order.md
docs/components/killswitch/: abstract_killswitch.md
docs/components/log/: abstract_logger.md  atomic_logger.md  console_logger.md  log.md
docs/components/metrics/: abstract_execution_tracker.md  abstract_pnl_tracker.md
docs/components/net/: abstract_transport.md  abstract_websocket_client.md
docs/components/position/: abstract_position_manager.md
docs/components/risk/: abstract_risk_manager.md
docs/components/sink/: abstract_storage_sink.md
docs/components/strategy/: abstract_strategy.md
docs/components/validation/: abstract_order_validator.md
docs/usage/: config.md  connectors.md  demo.md  getting_started.md  integration_flow.md  running_engine.md  strategies.md
include/flox/: common.h
include/flox/aggregator/: candle_aggregator.h  candle_aggregator_component.h
include/flox/book/: abstract_order_book.h  abstract_order_book_factory.h  book_side.h  book_update.h  book_update_factory.h  candle.h  full_order_book.h  full_order_book_factory.h  nlevel_order_book.h  order.h  order_book_component.h  trade.h  windowed_order_book.h  windowed_order_book_factory.h
include/flox/connector/: abstract_exchange_connector.h  connector_factory.h  connector_manager.h  exchange_connector.h
include/flox/engine/: abstract_engine.h  abstract_engine_builder.h  abstract_event_pool.h  abstract_market_data_subscriber.h  abstract_subscriber.h  abstract_subsystem.h  engine.h  engine_component.h  engine_config.h  event_dispatcher.h  market_data_bus.h  market_data_event_pool.h  market_data_subscriber_component.h  order_router.h  subscriber_component.h  subsystem.h  subsystem_component.h  symbol_registry.h  tick_barrier.h  tick_guard.h
include/flox/execution/: abstract_execution_listener.h  abstract_executor.h  execution_tracker_adapter.h  multi_execution_listener.h  order.h  order_execution_listener_component.h  order_executor_component.h  order_tracker.h
include/flox/killswitch/: abstract_killswitch.h  killswitch_component.h
include/flox/log/: abstract_logger.h  atomic_logger.h  console_logger.h  log.h  log_stream.h
include/flox/metrics/: abstract_execution_tracker.h  abstract_pnl_tracker.h  execution_tracker_component.h
include/flox/net/: abstract_transport.h  abstract_websocket_client.h
include/flox/position/: abstract_position_manager.h  position_manager.h  (+1 more)
scripts/: check-format.sh  perf-extended.sh  pre-commit  profile-cpu-affinity.sh  run-benchmarks.sh
src/aggregator/: candle_aggregator.cpp
src/book/: book_side.cpp  full_order_book.cpp  windowed_order_book.cpp
src/engine/: engine.cpp  market_data_bus.cpp  order_router.cpp  symbol_registry.cpp
src/execution/: order_tracker.cpp
src/log/: atomic_logger.cpp  console_logger.cpp  log_stream.cpp
src/position/: position_manager.cpp
src/strategy/: strategy_manager.cpp
tests/: CMakeLists.txt  test_atomic_logger.cpp  test_book_side.cpp  test_book_update_bus.cpp  test_candle_aggregator.cpp  test_connection_factory.cpp  test_connector_manager.cpp  test_cpu_affinity.cpp  test_decimal.cpp  test_engine_smoke.cpp  test_event_bus_instantiation.cpp  test_event_pool.cpp  test_full_order_book.cpp  test_market_data_bus.cpp  test_multi_execution_listener.cpp  test_nlevel_order_book.cpp  test_order_execution_bus.cpp  test_order_lifecycle.cpp  test_order_tracker.cpp  test_position_manager.cpp  test_push_pull_subscribers.cpp  test_ref_countable.cpp  test_spsc.cpp  test_spsc_advanced.cpp  test_strategy_manager.cpp  test_symbol_id_order_router.cpp  test_symbol_registry.cpp  test_sync_book_update_bus.cpp  test_sync_candle_aggregator.cpp  test_sync_market_data_bus.cpp  test_sync_order_execution_bus.cpp  test_tick_barrier.cpp  test_verify_order_book.cpp  test_windowed_order_book.cpp
(+67 files in other folders)
